消息队列实现延迟执行函数
